--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 default.page.size=5
 default.page.start=0
-
+default.sort.by=id,asc
 
 default.admin.username=admin@admin.eu
 default.admin.password=admin
