--- a/credit/pom.xml
+++ b/credit/pom.xml
@@ -2,11 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>eu.mrndesign.matned</groupId>
         <artifactId>create-credit</artifactId>
         <version>2.4.3</version>
     </parent>
+
+
     <artifactId>credit</artifactId>
     <version>ChocoladeIcecream</version>
     <name>credit</name>
@@ -14,6 +17,25 @@
     <properties>
         <java.version>11</java.version>
     </properties>
+
+
+    <dependencies>
+        <dependency>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock-standalone</artifactId>
+            <version>2.26.3</version>
+            <scope>compile</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.github.holgerbrandl/jsonbuilder -->
+        <dependency>
+            <groupId>com.github.holgerbrandl</groupId>
+            <artifactId>jsonbuilder</artifactId>
+            <version>0.9</version>
+        </dependency>
+
+    </dependencies>
+
+
 
 
 </project>
