change of argumentation

--- a/credit/src/main/resources/application.properties
+++ b/credit/src/main/resources/application.properties
@@ -2,6 +2,6 @@ default.page.size=5
 default.page.start=0
 default.sort.by=id,asc
 
-host.name=
-client.port=
-product.port=
+host.name=localhost
+client.port=8090
+product.port=8091
