--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,6 @@ version: '3.9'
 services:
 
   credit_app:
-
     image: 'credit:latest'
     build:
       context: ./
@@ -16,15 +15,13 @@ services:
       - SPRING_DATASOURCE_USERNAME=${POSTGRES_USER}
       - SPRING_DATASOURCE_PASSWORD=${POSTGRES_PASSWORD}
       - SPRING_JPA_HIBERNATE_DDL_AUTO=update
-      - HOST_NAME=${HOST}
       - CLIENT_PORT=${PORT2}
       - PRODUCT_PORT=${PORT3}
     ports:
-      - ${PORT1}:8080
+      - ${PORT1}:${PORT1}
 
 
   client_app:
-
     image: 'client:latest'
     build:
       context: ./
@@ -37,15 +34,13 @@ services:
       - SPRING_DATASOURCE_USERNAME=${POSTGRES_USER}
       - SPRING_DATASOURCE_PASSWORD=${POSTGRES_PASSWORD}
       - SPRING_JPA_HIBERNATE_DDL_AUTO=update
-      - HOST_NAME=${HOST}
       - CREDIT_PORT=${PORT1}
       - PRODUCT_PORT=${PORT3}
     ports:
-      - ${PORT2}:8080
+      - ${PORT2}:${PORT2}
 
 
   product_app:
-
     image: 'product:latest'
     build:
       context: ./
@@ -58,11 +53,10 @@ services:
       - SPRING_DATASOURCE_USERNAME=${POSTGRES_USER}
       - SPRING_DATASOURCE_PASSWORD=${POSTGRES_PASSWORD}
       - SPRING_JPA_HIBERNATE_DDL_AUTO=update
-      - HOST_NAME=${HOST}
       - CLIENT_PORT=${PORT2}
       - CREDIT_PORT=${PORT1}
     ports:
-      - ${PORT3}:8080
+      - ${PORT3}:${PORT3}
 
   db:
 
