--- a/credit/src/main/resources/application.properties
+++ b/credit/src/main/resources/application.properties
@@ -2,6 +2,11 @@ default.page.size=5
 default.page.start=0
 default.sort.by=id,asc
 
-host.name=localhost
 client.port=8090
 product.port=8091
+
+server.port=8089
+
+
+spring.profiles.active=dev
+
