--- a/product/src/main/resources/application.properties
+++ b/product/src/main/resources/application.properties
@@ -2,5 +2,9 @@ default.page.size=5
 default.page.start=0
 default.sort.by=id,asc
 
-host.name=localhost
 credit.port=8089
+
+server.port=8091
+
+
+spring.profiles.active=dev
