--- a/product/pom.xml
+++ b/product/pom.xml
@@ -2,17 +2,27 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>eu.mrndesign.matned</groupId>
-        <version>2.4.3</version>
         <artifactId>create-credit</artifactId>
+        <version>2.4.3</version>
     </parent>
+
     <artifactId>product</artifactId>
-    <version>ChocoladeIcecream</version>
+
     <name>product</name>
     <description>Product module for create credit application</description>
+
     <properties>
         <java.version>11</java.version>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>eu.mrndesign.matned</groupId>
+            <artifactId>create-credit</artifactId>
+            <version>2.4.3</version>
+        </dependency>
+    </dependencies>
 </project>
