--- a/client/pom.xml
+++ b/client/pom.xml
@@ -2,28 +2,26 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>eu.mrndesign.matned</groupId>
         <artifactId>create-credit</artifactId>
         <version>2.4.3</version>
     </parent>
-
     <artifactId>client</artifactId>
-
+    <version>ChocoladeIcecream</version>
     <name>client</name>
-    <description>Client module for create-credit application</description>
-
+    <description>Client module for create-credit</description>
     <properties>
         <java.version>11</java.version>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>eu.mrndesign.matned</groupId>
-            <artifactId>create-credit</artifactId>
-            <version>2.4.3</version>
-        </dependency>
-    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
