--- a/client/pom.xml
+++ b/client/pom.xml
@@ -2,6 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>eu.mrndesign.matned</groupId>
         <artifactId>create-credit</artifactId>
@@ -23,5 +24,13 @@
             </plugin>
         </plugins>
     </build>
+
+    <dependencies>
+        <dependency>
+            <groupId>eu.mrndesign.matned</groupId>
+            <artifactId>common</artifactId>
+            <version>2.4.3</version>
+        </dependency>
+    </dependencies>
 
 </project>
