--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
 		<module>client</module>
 		<module>credit</module>
 		<module>product</module>
+		<module>common</module>
 	</modules>
 
 	<dependencies>
@@ -61,6 +62,17 @@
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>4.5</version>
+		</dependency>
+
+		<!--        VALIDATION-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.1.Final</version>
 		</dependency>
 
 		<!--        DATABASE-->
