--- a/client/src/main/resources/application.properties
+++ b/client/src/main/resources/application.properties
@@ -2,9 +2,9 @@ default.page.size=5
 default.page.start=0
 default.sort.by=id,asc
 
-credit.port=8089
+credit.port=${CREDIT_PORT}
 
-server.port=8090
+server.port=${CLIENT_PORT}
 
 spring.profiles.active=dev
 
