--- a/credit/src/main/resources/application.properties
+++ b/credit/src/main/resources/application.properties
@@ -2,11 +2,11 @@ default.page.size=5
 default.page.start=0
 default.sort.by=id,asc
 
-credit.port=8089
-client.port=8090
-product.port=8091
+credit.port=${CREDIT_PORT}
+client.port=${CLIENT_PORT}
+product.port=${PRODUCT_PORT}
 
-server.port=8089
+server.port=${CREDIT_PORT}
 
 server.error.include-message=always
 spring.profiles.active=dev
