--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - SPRING_DATASOURCE_USERNAME=${POSTGRES_USER}
       - SPRING_DATASOURCE_PASSWORD=${POSTGRES_PASSWORD}
       - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+      - CREDIT_PORT=${PORT1}
       - CLIENT_PORT=${PORT2}
       - PRODUCT_PORT=${PORT3}
     ports:
@@ -35,7 +36,7 @@ services:
       - SPRING_DATASOURCE_PASSWORD=${POSTGRES_PASSWORD}
       - SPRING_JPA_HIBERNATE_DDL_AUTO=update
       - CREDIT_PORT=${PORT1}
-      - PRODUCT_PORT=${PORT3}
+      - CLIENT_PORT=${PORT2}
     ports:
       - ${PORT2}:${PORT2}
 
@@ -53,7 +54,7 @@ services:
       - SPRING_DATASOURCE_USERNAME=${POSTGRES_USER}
       - SPRING_DATASOURCE_PASSWORD=${POSTGRES_PASSWORD}
       - SPRING_JPA_HIBERNATE_DDL_AUTO=update
-      - CLIENT_PORT=${PORT2}
+      - PRODUCT_PORT=${PORT3}
       - CREDIT_PORT=${PORT1}
     ports:
       - ${PORT3}:${PORT3}
