--- a/client/pom.xml
+++ b/client/pom.xml
@@ -29,8 +29,9 @@
         <dependency>
             <groupId>eu.mrndesign.matned</groupId>
             <artifactId>common</artifactId>
-            <version>2.4.3</version>
+            <version>ChocoladeIcecream</version>
         </dependency>
+
     </dependencies>
 
 </project>
