--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
 			<version>8.0.23</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
 
 		<!--        TESTING -->
 		<dependency>
