--- a/common/pom.xml
+++ b/common/pom.xml
@@ -1,35 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>create-credit</artifactId>
         <groupId>eu.mrndesign.matned</groupId>
+        <artifactId>create-credit</artifactId>
         <version>2.4.3</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
-    <packaging>jar</packaging>
-
     <artifactId>common</artifactId>
     <version>ChocoladeIcecream</version>
+    <name>common</name>
+    <description>Common module for create-credit application</description>
+
 
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <java.version>11</java.version>
     </properties>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <classifier>exec</classifier>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
 
 </project>
